--- a/admin/adminTransaction.html
+++ b/admin/adminTransaction.html
@@ -13,7 +13,7 @@
         <aside id="menu" class="bg-white shadow-lg w-64 fixed h-full z-30 transform -translate-x-full lg:translate-x-0 transition-transform duration-300">
             <div class="p-6 bg-bleu flex justify-between items-center">
                 <h2 class="text-white text-xl font-bold">Admin Panel</h2>
-                <button id="btnFermer" class="lg:hidden text-white hover:text-gray-200">
+                <button id="btnFerm" class="lg:hidden text-white hover:text-gray-200">
                     <i class="fas fa-times text-xl"></i>
                 </button>
             </div>
@@ -70,7 +70,7 @@
             <header class="bg-white shadow-sm border-b">
                 <div class="flex items-center justify-between px-4 lg:px-6 py-4">
                     <div class="flex items-center">
-                        <button id="btnOuvrir" class="lg:hidden text-gray-600 mr-4">
+                        <button id="btnOuvr" class="lg:hidden text-gray-600 mr-4">
                             <i class="fas fa-bars text-xl"></i>
                         </button>
                         <h1 class="text-xl lg:text-2xl font-semibold text-gray-800">Gestion des Transactions</h1>
@@ -86,29 +86,6 @@
             </header>
 
             <main class="p-4 lg:p-6">
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 lg:gap-6 mb-6 lg:mb-8">
-                    <div class="bg-white rounded-lg shadow-md p-4 lg:p-6">
-                        <div class="text-center">
-                            <p class="text-gray-500 text-sm">Nombre dépôt</p>
-                            <p class="text-2xl font-bold text-green-600" id="nbDep">0</p>
-                        </div>
-                    </div>
-
-                    <div class="bg-white rounded-lg shadow-md p-4 lg:p-6">
-                        <div class="text-center">
-                            <p class="text-gray-500 text-sm">Nombre retrait</p>
-                            <p class="text-2xl font-bold text-blue-600" id="nbRet">0</p>
-                        </div>
-                    </div>
-
-                    <div class="bg-white rounded-lg shadow-md p-4 lg:p-6">
-                        <div class="text-center">
-                            <p class="text-gray-500 text-sm">Nombre rejeté</p>
-                            <p class="text-2xl font-bold text-red-600" id="nbRej">0</p>
-                        </div>
-                    </div>
-                </div>
-
                 <div class="bg-white rounded-lg shadow-md mb-6">
                     <div class="px-4 lg:px-6 py-4 border-b">
                         <h2 class="text-lg lg:text-xl font-semibold text-gray-800">
@@ -133,12 +110,12 @@
                                     <th class="px-4 py-3 text-left text-xs font-medium text-gray-500 uppercase">Actions</th>
                                 </tr>
                             </thead>
-                            <tbody id="tabAttente" class="divide-y divide-gray-200">
+                            <tbody id="tabAtt" class="divide-y divide-gray-200">
                             </tbody>
                         </table>
                     </div>
 
-                    <div class="md:hidden" id="attenteMobile">
+                    <div class="md:hidden" id="attMob">
                     </div>
                 </div>
 
@@ -149,14 +126,14 @@
                             Historique des transactions
                         </h2>
                         <div class="flex flex-col sm:flex-row gap-2">
-                            <select id="filtPer" class="px-3 py-2 border border-gray-300 rounded-lg text-sm">
+                            <select id="filPer" class="px-3 py-2 border border-gray-300 rounded-lg text-sm">
                                 <option value="tous">Tous</option>
                                 <option value="auj">Aujourd'hui</option>
                                 <option value="hier">Hier</option>
                                 <option value="moisAct">Mois actuel</option>
                                 <option value="moisDer">Mois dernier</option>
                             </select>
-                            <select id="filtTyp" class="px-3 py-2 border border-gray-300 rounded-lg text-sm">
+                            <select id="filTyp" class="px-3 py-2 border border-gray-300 rounded-lg text-sm">
                                 <option value="">Tous les types</option>
                                 <option value="depot">Dépôts</option>
                                 <option value="retrait">Retraits</option>
@@ -186,7 +163,7 @@
                         </table>
                     </div>
 
-                    <div class="md:hidden" id="histMobile">
+                    <div class="md:hidden" id="histMob">
                     </div>
                 </div>
             </main>
@@ -199,11 +176,11 @@
         <div class="bg-white rounded-lg max-w-md w-full p-6">
             <div class="flex justify-between items-center mb-4">
                 <h3 class="text-lg font-semibold">Détails de la Transaction</h3>
-                <button id="btnFermerModal" class="text-gray-400 hover:text-gray-600">
+                <button id="btnFermMod" class="text-gray-400 hover:text-gray-600">
                     <i class="fas fa-times"></i>
                 </button>
             </div>
-            <div id="contModal" class="space-y-3">
+            <div id="contMod" class="space-y-3">
             </div>
             <div class="flex justify-end space-x-3 mt-6">
                 <button id="btnRej" class="bg-red-600 text-white px-4 py-2 rounded-lg hover:bg-red-700 transition-colors">
